Add img cdn url

--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -360,4 +360,4 @@ youtubeNotes:
 {% youtubeList melissa %}
 {% youtubeList brian %}
 
-{% cdnImage image, metadata.cdn_url, alt, caption %}
+{% cdnImage image, metadata.img_cdn_url, alt, caption %}
