--- a/_includes/layouts/episode.njk
+++ b/_includes/layouts/episode.njk
@@ -11,7 +11,7 @@ layout: site
     </header>
     
     <div class="e-content">
-        <audio src="{{ metadata.cdn_url }}/{{ page.fileSlug }}.mp3" preload="metadata" controls>
+        <audio src="{{ metadata.mp3_cdn_url }}/{{ page.fileSlug }}.mp3" preload="metadata" controls>
         </audio>
         
         <p class="description">{{ description }}</p>
