--- a/episodes/022-fast-food-restaurants.njk
+++ b/episodes/022-fast-food-restaurants.njk
@@ -45,7 +45,7 @@ melissa:
 
 <h2>Notes</h2>
 <div class="notes">
-  {% cdnImage "chik-fil-a-cows.jpg", metadata.cdn_url, "Brian, Melissa, and Lydia dressed as cows for Chik-Fil-A’s Cow Appreciation Day", "Moo!" %}
+  {% cdnImage "chik-fil-a-cows.jpg", metadata.img_cdn_url, "Brian, Melissa, and Lydia dressed as cows for Chik-Fil-A’s Cow Appreciation Day", "Moo!" %}
   
   {% youtube {"id": "EBeIMckHrnk", "caption": "The Great Root Bear’s theme song, <i class='song-title'>Ba-dum Ba-dum</i>"} %}
 
