--- a/episodes/105-board-games-addendum-2019.njk
+++ b/episodes/105-board-games-addendum-2019.njk
@@ -14,8 +14,8 @@ tags:
   - board-games
 ---
 
-{% cdnImage 'marble-bobsleigh.jpg', metadata.cdn_url, 'Marble Bobsleigh', 'Marble Bobsleigh' %}
+{% cdnImage 'marble-bobsleigh.jpg', metadata.img_cdn_url, 'Marble Bobsleigh', 'Marble Bobsleigh' %}
 
-{% cdnImage 'takenoko-collectors-edition.jpg', metadata.cdn_url, "Takenoko Collector''s Edition", "Giant Panda from Takenoko Collector''s Edition" %}
+{% cdnImage 'takenoko-collectors-edition.jpg', metadata.img_cdn_url, "Takenoko Collector''s Edition", "Giant Panda from Takenoko Collector''s Edition" %}
 
-{% cdnImage 'lords-of-hellas-painted-miniatures.jpg', metadata.cdn_url, 'Lords of Hellas', 'Lords of Hellas with painted miniatures' %}
+{% cdnImage 'lords-of-hellas-painted-miniatures.jpg', metadata.img_cdn_url, 'Lords of Hellas', 'Lords of Hellas with painted miniatures' %}
