--- a/episodes/110-candy-bars.njk
+++ b/episodes/110-candy-bars.njk
@@ -59,4 +59,4 @@ tim:
 {% list melissa %}
 {% list tim %}
 
-{% cdnImage 'candy-bar-wrappers.jpg', metadata.cdn_url, 'Candy bar wrappers', 'Research results' %}
+{% cdnImage 'candy-bar-wrappers.jpg', metadata.img_cdn_url, 'Candy bar wrappers', 'Research results' %}
