--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -32,8 +32,8 @@
                 <li><a href="/subscribe/">{% icon 'headphones-user' %} Subscribe</a>
             </ol>
             <div class="site-nav-episodes">
-                {% episodeBlock collections.episodes | last, "Latest", metadata.cdn_url %}
-                {% episodeBlock collections.featured | last, "Featured", metadata.cdn_url %}
+                {% episodeBlock collections.episodes | last, "Latest", metadata.mp3_cdn_url %}
+                {% episodeBlock collections.featured | last, "Featured", metadata.mp3_cdn_url %}
             </div>
             <div class="site-nav-footer">
                 <a href="/feed.rss">{% icon 'rss' %} RSS</a>
