--- a/episodes/014-animals.njk
+++ b/episodes/014-animals.njk
@@ -47,7 +47,7 @@ melissa:
 <div class="notes">
   {% youtube {"id": "5ZaSZuYNViY?t=24m23s", "caption": "Walrus using tusks to climb onto ice"} %}
 
-  {% cdnImage "wooly-rhino.jpg", metadata.cdn_url, "Wooly Rhinocerous", "Behold the wooly rhinocerous!" %}
+  {% cdnImage "wooly-rhino.jpg", metadata.img_cdn_url, "Wooly Rhinocerous", "Behold the wooly rhinocerous!" %}
 
   <p><a href="https://bpsfuelforthought.wordpress.com/2012/08/14/why-giraffes-dont-have-brain-damage/">Giraffe’s amazing cardio-vascular system</a></p>
 
