Update Android subscription instructions

--- a/subscribe.njk
+++ b/subscribe.njk
@@ -21,25 +21,18 @@ layout: site
                 <p>Download <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.podcasts&hl=en_US">Google Podcasts</a> or the podcast app of your choice.</p>
             <li>
                 <p>Tap the <kbd><samp>🔍</samp></kbd> button.</p>
-                {% cdnImage "subscribe-android-podcast-addict-01.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-android-01.png", metadata.img_cdn_url, "Step 1 for subscribing on Android" %}
             <li>
-                <p>Tap <kbd><samp>Settings</samp></kbd> in the dialog at the top of the screen.</p>
-                {% cdnImage "subscribe-android-podcast-addict-02.png", metadata.cdn_url %}
-            <li>
-                <p>Tap <kbd><samp>TURN ON</samp></kbd> to allow your phone to save podcast subscriptions.</p>
-                {% cdnImage "subscribe-android-podcast-addict-03.png", metadata.cdn_url %}
-            <li>
-                <p>Search for <samp><kbd>tto.koser.us</kbd></samp>.</p>
-                {% cdnImage "subscribe-android-podcast-addict-04.png", metadata.cdn_url %}
+                <p>Search for <samp><kbd>ten to one</kbd></samp>.</p>
+                {% cdnImage "subscribe-android-02.png", metadata.img_cdn_url, "Step 2 for subscribing on Android" %}
             <li>
                 <p>Tap on our logo.</p>
-                {% cdnImage "subscribe-android-podcast-addict-05.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-android-03.png", metadata.img_cdn_url, "Step 3 for subscribing on Android" %}
             <li>
                 <p>Tap <kbd><samp>➕ Subscribe</samp></kbd>.</p>
-                {% cdnImage "subscribe-android-podcast-addict-06.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-android-04.png", metadata.img_cdn_url, "Step 4 for subscribing on Android" %}
             <li>
                 <p>You will get a notification when an episode has downloaded. Tap the notification to see the new episode, or open the app and tap on the Ten to One tile.</p>
-                {% cdnImage "subscribe-android-podcast-addict-07.png", metadata.cdn_url %}
             <li>
                 <p>Enjoy the podcast!</p>
         </ol>
@@ -54,22 +47,22 @@ layout: site
         <ol>
             <li>
                 <p>Open the <kbd><samp>Podcasts</samp></kbd> app on your iPhone or iPad.</p>
-                {% cdnImage "subscribe-apple-1.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-apple-1.png", metadata.img_cdn_url %}
             <li>
                 <p>Tap the <kbd><samp>Search</samp> button in the bottom menu.</p>
-                {% cdnImage "subscribe-apple-2.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-apple-2.png", metadata.img_cdn_url %}
             <li>
                 <p>Search for <samp><kbd>Ten to One</kbd></samp>.</p>
-                {% cdnImage "subscribe-apple-3.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-apple-3.png", metadata.img_cdn_url %}
             <li>
-                <p>Find and tap on the Ten to One podcast (you may need to scroll down).</p>
-                {% cdnImage "subscribe-apple-4.png", metadata.cdn_url %}
+                <p>Find and tap on the Ten to One podcast (it should be the first one listed).</p>
+                {% cdnImage "subscribe-apple-4.png", metadata.img_cdn_url %}
             <li>
                 <p>Tap the <kbd><samp>Subscribe</samp></kbd> button.</p>
-                {% cdnImage "subscribe-apple-5.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-apple-5.png", metadata.img_cdn_url %}
             <li>
                 <p>Tap the <kbd><samp>My Podcasts</samp></kbd> button. Then tap on any episode to download and listen.</p>
-                {% cdnImage "subscribe-apple-6.png", metadata.cdn_url %}
+                {% cdnImage "subscribe-apple-6.png", metadata.img_cdn_url %}
             <li>
                 <p>New episodes will download automatically.</p>
             <li>
@@ -88,16 +81,16 @@ layout: site
                 <p>Download and install <a href="https://www.apple.com/itunes/">iTunes</a>.
             <li>
                 <p>Open iTunes and click <kbd><samp>File</samp></kbd>, then <kbd><samp>Subscribe to Podcast</samp></kbd>.</p>
-                {% cdnImage "subscribe-windows-itunes-1", metadata.cdn_url %}
+                {% cdnImage "subscribe-windows-itunes-1", metadata.img_cdn_url %}
             <li>
                 <p>Enter the feed URL: <samp><kbd>http://tto.koser.us/feed.rss</kbd></samp> and click <kbd><samp>OK</samp></kbd>.</p>
-                {% cdnImage "subscribe-windows-itunes-2", metadata.cdn_url %}
+                {% cdnImage "subscribe-windows-itunes-2", metadata.img_cdn_url %}
             <li>
                 <p>You do not need to sync, but you should select <kbd><samp>Automatically download new episodes for your subscriptions</samp></kbd>, then click <kbd><samp>Continue</samp></kbd>.</p>
-                {% cdnImage "subscribe-windows-itunes-3", metadata.cdn_url %}
+                {% cdnImage "subscribe-windows-itunes-3", metadata.img_cdn_url %}
             <li>
                 <p>Listen to an episode by double-clicking it.</p>
-                {% cdnImage "subscribe-windows-itunes-4", metadata.cdn_url %}   
+                {% cdnImage "subscribe-windows-itunes-4", metadata.img_cdn_url %}   
             <li>
                 <p>Open iTunes to listen to the podcast. New episodes will be automatically downloaded.</p>
             <li>
