Update iOS subscription steps

--- a/subscribe.njk
+++ b/subscribe.njk
@@ -47,22 +47,22 @@ layout: site
         <ol>
             <li>
                 <p>Open the <kbd><samp>Podcasts</samp></kbd> app on your iPhone or iPad.</p>
-                {% cdnImage "subscribe-apple-1.png", metadata.img_cdn_url %}
+                {% cdnImage "subscribe-ios-01.png", metadata.img_cdn_url, "Step 1 for subscribing on Android" %}
             <li>
                 <p>Tap the <kbd><samp>Search</samp> button in the bottom menu.</p>
-                {% cdnImage "subscribe-apple-2.png", metadata.img_cdn_url %}
+                {% cdnImage "subscribe-ios-02.png", metadata.img_cdn_url, "Step 2 for subscribing on Android" %}
             <li>
                 <p>Search for <samp><kbd>Ten to One</kbd></samp>.</p>
-                {% cdnImage "subscribe-apple-3.png", metadata.img_cdn_url %}
+                {% cdnImage "subscribe-ios-03.png", metadata.img_cdn_url, "Step 3 for subscribing on Android" %}
             <li>
                 <p>Find and tap on the Ten to One podcast (it should be the first one listed).</p>
-                {% cdnImage "subscribe-apple-4.png", metadata.img_cdn_url %}
+                {% cdnImage "subscribe-ios-04.png", metadata.img_cdn_url, "Step 4 for subscribing on Android" %}
             <li>
-                <p>Tap the <kbd><samp>Subscribe</samp></kbd> button.</p>
-                {% cdnImage "subscribe-apple-5.png", metadata.img_cdn_url %}
+                <p>Tap the <kbd><samp>SUBSCRIBE</samp></kbd> button.</p>
+                {% cdnImage "subscribe-ios-05.png", metadata.img_cdn_url, "Step 5 for subscribing on Android" %}
             <li>
-                <p>Tap the <kbd><samp>My Podcasts</samp></kbd> button. Then tap on any episode to download and listen.</p>
-                {% cdnImage "subscribe-apple-6.png", metadata.img_cdn_url %}
+                <p>Tap the <kbd><samp>Library</samp></kbd> button, then on the podcast. Then tap on any episode to download and listen.</p>
+                {% cdnImage "subscribe-ios-06.png", metadata.img_cdn_url, "Step 6 for subscribing on Android" %}
             <li>
                 <p>New episodes will download automatically.</p>
             <li>
