Fix Windows subscription errors

--- a/subscribe.njk
+++ b/subscribe.njk
@@ -47,22 +47,22 @@ layout: site
         <ol>
             <li>
                 <p>Open the <kbd><samp>Podcasts</samp></kbd> app on your iPhone or iPad.</p>
-                {% cdnImage "subscribe-ios-01.png", metadata.img_cdn_url, "Step 1 for subscribing on Android" %}
+                {% cdnImage "subscribe-ios-01.png", metadata.img_cdn_url, "Step 1 for subscribing on iOS" %}
             <li>
                 <p>Tap the <kbd><samp>Search</samp> button in the bottom menu.</p>
-                {% cdnImage "subscribe-ios-02.png", metadata.img_cdn_url, "Step 2 for subscribing on Android" %}
+                {% cdnImage "subscribe-ios-02.png", metadata.img_cdn_url, "Step 2 for subscribing on iOS" %}
             <li>
                 <p>Search for <samp><kbd>Ten to One</kbd></samp>.</p>
-                {% cdnImage "subscribe-ios-03.png", metadata.img_cdn_url, "Step 3 for subscribing on Android" %}
+                {% cdnImage "subscribe-ios-03.png", metadata.img_cdn_url, "Step 3 for subscribing on iOS" %}
             <li>
                 <p>Find and tap on the Ten to One podcast (it should be the first one listed).</p>
-                {% cdnImage "subscribe-ios-04.png", metadata.img_cdn_url, "Step 4 for subscribing on Android" %}
+                {% cdnImage "subscribe-ios-04.png", metadata.img_cdn_url, "Step 4 for subscribing on iOS" %}
             <li>
                 <p>Tap the <kbd><samp>SUBSCRIBE</samp></kbd> button.</p>
-                {% cdnImage "subscribe-ios-05.png", metadata.img_cdn_url, "Step 5 for subscribing on Android" %}
+                {% cdnImage "subscribe-ios-05.png", metadata.img_cdn_url, "Step 5 for subscribing on iOS" %}
             <li>
                 <p>Tap the <kbd><samp>Library</samp></kbd> button, then on the podcast. Then tap on any episode to download and listen.</p>
-                {% cdnImage "subscribe-ios-06.png", metadata.img_cdn_url, "Step 6 for subscribing on Android" %}
+                {% cdnImage "subscribe-ios-06.png", metadata.img_cdn_url, "Step 6 for subscribing on iOS" %}
             <li>
                 <p>New episodes will download automatically.</p>
             <li>
@@ -81,16 +81,16 @@ layout: site
                 <p>Download and install <a href="https://www.apple.com/itunes/">iTunes</a>.
             <li>
                 <p>Open iTunes and click <kbd><samp>File</samp></kbd>, then <kbd><samp>Subscribe to Podcast</samp></kbd>.</p>
-                {% cdnImage "subscribe-windows-itunes-1", metadata.img_cdn_url %}
+                {% cdnImage "subscribe-windows-itunes-1.png", metadata.img_cdn_url, "Step 1 for subscribing on Windows" %}
             <li>
                 <p>Enter the feed URL: <samp><kbd>http://tto.koser.us/feed.rss</kbd></samp> and click <kbd><samp>OK</samp></kbd>.</p>
-                {% cdnImage "subscribe-windows-itunes-2", metadata.img_cdn_url %}
+                {% cdnImage "subscribe-windows-itunes-2.png", metadata.img_cdn_url, "Step 2 for subscribing on Windows" %}
             <li>
                 <p>You do not need to sync, but you should select <kbd><samp>Automatically download new episodes for your subscriptions</samp></kbd>, then click <kbd><samp>Continue</samp></kbd>.</p>
-                {% cdnImage "subscribe-windows-itunes-3", metadata.img_cdn_url %}
+                {% cdnImage "subscribe-windows-itunes-3.png", metadata.img_cdn_url, "Step 3 for subscribing on Windows" %}
             <li>
                 <p>Listen to an episode by double-clicking it.</p>
-                {% cdnImage "subscribe-windows-itunes-4", metadata.img_cdn_url %}   
+                {% cdnImage "subscribe-windows-itunes-4.png", metadata.img_cdn_url, "Step 4 for subscribing on Windows" %}   
             <li>
                 <p>Open iTunes to listen to the podcast. New episodes will be automatically downloaded.</p>
             <li>
