--- a/episodes/131-cereals-revisited.njk
+++ b/episodes/131-cereals-revisited.njk
@@ -64,8 +64,8 @@ melissa:
       url: https://www.mrbreakfast.com/cereal_detail.asp?id=81
 
 notes:
-  - [№ 46 Breakfast Cereals](https://tto.koser.us/episodes/046-breakfast-cereals/)
-  - [Consumer Reports - Cereals that aren't as healthy as they sound](https://www.consumerreports.org/cro/news/2014/09/cereals-that-aren-t-as-healthy-as-they-sound/index.htm)
+  - <a href="https://tto.koser.us/episodes/046-breakfast-cereals/">№ 46 Breakfast Cereals</a>
+  - <a href="https://www.consumerreports.org/cro/news/2014/09/cereals-that-aren-t-as-healthy-as-they-sound/index.htm">Consumer Reports - Cereals that aren't as healthy as they sound</a>
   - New podcast tagline: “If you’re looking for support on a podcast, this is not the podcast for you.”
 ---
 {% linkList melissa %}
