Remove colons that break for some reason

--- a/episodes/133-wheel-of-time-book-6-lord-of-chaos.njk
+++ b/episodes/133-wheel-of-time-book-6-lord-of-chaos.njk
@@ -1,7 +1,7 @@
 ---
 layout: episode
 number: 133
-title: Wheel of Time 
+title: "Wheel of Time, Book 6: Lord of Chaos"
 description: We join Matt Anderson and Ben De Bono on The Sci-Fi Christian podcast to discuss Lord of Chaos, book six in the Wheel of Time series.
 date: 2020-12-04
 hosts:
@@ -18,5 +18,5 @@ tags:
   - the-sci-fi-christian
   - wheel-of-time
 notes:
-  - <a href="http://thescifichristian.com/2020/09/episode-841-unweaving-the-wheel-of-time-book-6/">The Sci-Fi Christian, Episode 841: Unweaving The Wheel of Time: Book 6</a>
+  - <a href="http://thescifichristian.com/2020/09/episode-841-unweaving-the-wheel-of-time-book-6/">The Sci-Fi Christian, Episode 841 Unweaving The Wheel of Time Book 6</a>
 ---
