--- a/episodes/136-books-2020.njk
+++ b/episodes/136-books-2020.njk
@@ -3,11 +3,11 @@ layout: episode
 number: 136
 title: Books 2020
 description: Brian and Melissa put a bow on Book Year by sharing their favorite books that were new reads in 2020.
-date: 2020-01-23
+date: 2021-01-23
 hosts:
   - Brian
   - Melissa
-bytes: 
+bytes: 76944492
 duration: '2:08:14'
 tags:
   - episodes
