--- a/episodes/119-movies-2019.njk
+++ b/episodes/119-movies-2019.njk
@@ -11,36 +11,56 @@ bytes: 40149196
 duration: '1:05:43'
 tags:
   - episodes
-  - 372-pages
-  - guests
+  - movies
+  - annual
 
 brian:
   host: Brian
   list:
-    - {"title": "Airplane!", "slug": "airplane"}
-    - {"title": "Fire Walk With Me", "slug": "twin-peaks-fire-walk-with-me"}
-    - {"title": "Lifeboat", "slug": "lifeboat"}
-    - {"title": "The Exorcist", "slug": "the-exorcist"}
-    - {"title": "Psycho", "slug": "psycho"}
-    - {"title": "City Lights", "slug": "city-lights"}
-    - {"title": "When Harry Met Sally...", "slug": "when-harry-met-sally"}
-    - {"title": "The High Sign/Cops", "slug": "the-high-sign"}
-    - {"title": "My Dinner with Andre", "slug": "my-dinner-with-andre"}
-    - {"title": "Seven Samurai", "slug": "seven-samurai"}
+    - title: Airplane!
+      slug: airplane
+    - title: Fire Walk With Me
+      slug: twin-peaks-fire-walk-with-me
+    - title: Lifeboat
+      slug: lifeboat
+    - title: The Exorcist
+      slug: the-exorcist
+    - title: Psycho
+      slug: psycho
+    - title: City Lights
+      slug: city-lights
+    - title: When Harry Met Sally...
+      slug: when-harry-met-sally
+    - title: The High Sign/Cops
+      slug: the-high-sign
+    - title: My Dinner with Andre
+      slug: my-dinner-with-andre
+    - title: Seven Samurai
+      slug: seven-samurai
 
 melissa:
   host: Melissa
   list:
-    - {"title": "How The Grinch Stole Christmas!", "slug": "how-the-grinch-stole-christmas"}
-    - {"title": "When Harry Met Sally...", "slug": "when-harry-met-sally"}
-    - {"title": "Princess Mononoke", "slug": "princess-mononoke"}
-    - {"title": "City Lights", "slug": "city-lights"}
-    - {"title": "The Philadelphia Story", "slug": "the-philadelphia-story"}
-    - {"title": "Brief Encounter", "slug": "brief-encounter"}
-    - {"title": "Avengers: Endgame", "slug": "avengers-endgame"}
-    - {"title": "Psycho", "slug": "psycho"}
-    - {"title": "All About Eve", "slug": "all-about-eve"}
-    - {"title": "Spiderman: Into the Spiderverse", "slug": "spider-man-into-the-spider-verse"}
+    - title: How The Grinch Stole Christmas!
+      slug: how-the-grinch-stole-christmas
+    - title: When Harry Met Sally...
+      slug: when-harry-met-sally
+    - title: Princess Mononoke
+      slug: princess-mononoke
+    - title: City Lights
+      slug: city-lights
+    - title: The Philadelphia Story
+      slug: the-philadelphia-story
+    - title: Brief Encounter
+      slug: brief-encounter
+    - title: Avengers: Endgame
+      slug: avengers-endgame
+    - title: Psycho
+      slug: psycho
+    - title: All About Eve
+      slug: all-about-eve
+    - title: "Spiderman: Into the Spiderverse"
+      slug: spider-man-into-the-spider-verse
 notes:
   - <a href="https://letterboxd.com/bkoser/year/2019/">Brian’s 2019 in review on Letterboxd</a>
   - <a href="https://letterboxd.com/mkoser/">Melissa on Letterboxd</a>
