--- a/episodes/119-movies-2019.njk
+++ b/episodes/119-movies-2019.njk
@@ -53,7 +53,7 @@ melissa:
       slug: the-philadelphia-story
     - title: Brief Encounter
       slug: brief-encounter
-    - title: Avengers: Endgame
+    - title: "Avengers: Endgame"
       slug: avengers-endgame
     - title: Psycho
       slug: psycho
