--- a/episodes/137-movies-2020.njk
+++ b/episodes/137-movies-2020.njk
@@ -41,9 +41,26 @@ brian:
 melissa:
   host: Melissa
   list:
+    - title: The Lighthouse
+      slug: the-lighthouse-2019
+    - title: Enemy
+      slug: enemy
     - title: Muppet Treasure Island
       slug: muppet-treasure-island
-    
+    - title: "Spider-Man: Far From Home"
+      slug: spider-man-far-from-home
+    - title: The Greatest Showman
+      slug: the-greatest-showman
+    - title: A Ghost Story
+      slug: a-ghost-story-2017
+    - title: The Goat
+      slug: the-goat
+    - title: Clue
+      slug: clue
+    - title: The Nice Guys
+      slug: the-nice-guys
+    - title: Zodiac
+      slug: zodiac
 notes:
   - <a href="https://letterboxd.com/bkoser/year/2020/">Brian’s 2020 in review on Letterboxd</a>
   - <a href="https://letterboxd.com/mkoser/">Melissa on Letterboxd</a>
