--- a/episodes/145-horror-plans-2021.njk
+++ b/episodes/145-horror-plans-2021.njk
@@ -1,7 +1,7 @@
 ---
 layout: episode
 number: 145
-title: Horror Planning 2021
+title: Horror Plans 2021
 description: Melissa and Brian make a list live! I mean, you're listening to a recording, but we recorded it live. We didn't make the list ahead of time, is what I'm saying. No, it was on purpose, not a lack of planning. Jeez. It's scary movies we're going to watch in October.
 date: 2021-09-24
 hosts:
