--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -223,37 +223,84 @@ bookMelissa:
 movieBrian:
   host: Brian
   list:
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
-    - character: 
-      title: 
+    - title: 
       slug: letterboxdSlug
 movieMelissa:
+  host: Melissa
+  list:
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+    - title: 
+      slug: letterboxdSlug
+
+movieCharacterBrian:
+  host: Brian
+  list:
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+movieCharacterMelissa:
   host: Melissa
   list:
     - character: 
