--- a/episodes/149-muppet-movies.njk
+++ b/episodes/149-muppet-movies.njk
@@ -20,7 +20,7 @@ brian:
       slug: the-muppets-wizard-of-oz
     - title: The Muppets Take Manhattan
       slug: the-muppets-take-manhattan
-    - title: John Denver and the Muppets: A Christmas Together
+    - title: "John Denver and the Muppets: A Christmas Together"
       slug: john-denver-and-the-muppets-a-christmas-together
     - title: Muppets From Space
       slug: muppets-from-space
@@ -44,7 +44,7 @@ melissa:
       slug: the-muppets-take-manhattan
     - title: The Muppets' Wizard of Oz
       slug: the-muppets-wizard-of-oz
-    - title: John Denver and the Muppets: A Christmas Together
+    - title: "John Denver and the Muppets: A Christmas Together"
       slug: john-denver-and-the-muppets-a-christmas-together
     - title: Muppets From Space
       slug: muppets-from-space
