--- a/episodes/152-books-2021.njk
+++ b/episodes/152-books-2021.njk
@@ -52,7 +52,7 @@ melissa:
       review: 
     - title: The American Way of Death Revisited
       review: 
-    - title: Being Mortal: Medicine and What Matters in the End
+    - title: "Being Mortal: Medicine and What Matters in the End"
       review: 
     - title: "Dune: Messiah"
       review: 
