--- a/episodes/153-flight-of-the-conchords-songs-feat-colten-jernigan.njk
+++ b/episodes/153-flight-of-the-conchords-songs-feat-colten-jernigan.njk
@@ -1,14 +1,14 @@
 ---
 layout: episode
 number: 153
-title: Flight of the Conchords Songs - FEAT. Colten Jernigan
+title: Flight of the Conchords Songs FEAT. Colten Jernigan
 description: Brian and special guest Colten Jernigan share their love of New Zealand comedy musical duo Flight of the Conchords by listening to their ten favorite songs.
 date: 2022-03-12
 hosts:
   - Brian
   - Colten
-bytes: 59_605_503
-duration: '1:20:09'
+bytes: 48_105_846
+duration: '1:20:10'
 tags:
   - episodes
   - music
