--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -21,7 +21,7 @@
 
         <meta property="og:title" content="{%- if number != null %}№ {{ number}} {{title}} {%- elif title != null -%}{{ title }} {%- else -%} {{metadata.podcast_name}} {%- endif %}" />
         <meta property="og:description" content="{% if description -%} {{ description }} {%- else -%} {{metadata.site_description}} {%- endif %}" />
-        <meta property="og:image" content="/img/logo-facebook.png" />
+        <meta property="og:image" content="{{ meta.facebook_image }}" />
         <meta property="og:image:width" content="1080" />
         <meta property="og:image:height" content="644" />
     </head>
