--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -20,6 +20,8 @@
 
         <meta property="og:title" content="{%- if number != null %}№ {{ number}} {{title}} {%- elif title != null -%}{{ title }} {%- else -%} {{metadata.podcast_name}} {%- endif %}" />
         <meta property="og:description" content="{% if description -%} {{ description }} {%- else -%} {{metadata.site_description}} {%- endif %}" />
+        <meta property="og:url" content="{{ metadata.site_url }}{{ page.url }}" />
+        <meta property="og:type" content="website" />
         <meta property="og:image" content="{{ metadata.facebook_image }}" />
         <meta property="og:image:width" content="1080" />
         <meta property="og:image:height" content="644" />
