--- a/episodes/019-memories.njk
+++ b/episodes/019-memories.njk
@@ -21,8 +21,8 @@ brian:
     - Catching mini golf ball right in front of Mom’s face
     - Vacations in Hawaii
     - Playing football in yard with brother Matt and neighbors
-    - Visiting the mountains in Japan: skiing, climbing Mount Fuji
-    - Dodgeball at college: playing and watching
+    - "Visiting the mountains in Japan: skiing, climbing Mount Fuji"
+    - "Dodgeball at college: playing and watching"
     - Playing Dutch Blitz late at night with siblings
     - Honeymoon in Gatlinburg, TN
     - Johnsons’ wedding
