--- a/episodes/057-jokes.njk
+++ b/episodes/057-jokes.njk
@@ -63,7 +63,7 @@ justin:
     - Yesterday I accidentally swallowed some food coloring.
     - An elderly couple visits their friends.
     - An Austrian, a Botswanan…
-    - There are two types of people in the world: those worth mentioning.
+    - "There are two types of people in the world: those worth mentioning."
     - Why will a Hindu never tell a “Yo Mama” joke?
     - I hate it when people get simple stuff wrong.
     - You don’t need a parachute to go skydiving.
