--- a/episodes/066-proverbs.njk
+++ b/episodes/066-proverbs.njk
@@ -16,16 +16,26 @@ tags:
 brian:
   host: Brian
   list:
-    - {"title": "Proverbs 3:27", "url": "https://www.biblegateway.com/passage/?search=Proverbs+3%3A27&amp;version=KJV"}
-    - {"title": "Proverbs 11:14", "url": "https://www.biblegateway.com/passage/?search=Proverbs+11%3A14&amp;version=KJV"}
-    - {"title": "Proverbs 14:4", "url": "https://www.biblegateway.com/passage/?search=Proverbs+14%3A4&amp;version=KJV"}
-    - {"title": "Proverbs 14:12", "url": "https://www.biblegateway.com/passage/?search=Proverbs+14%3A12&amp;version=KJV"}
-    - {"title": "Proverbs 15:28", "url": "https://www.biblegateway.com/passage/?search=Proverbs+15%3A28&amp;version=KJV"}
-    - {"title": "Proverbs 17:9", "url": "https://www.biblegateway.com/passage/?search=Proverbs+17%3A9&amp;version=KJV"}
-    - {"title": "Proverbs 17:10", "url": "https://www.biblegateway.com/passage/?search=Proverbs+17%3A10&amp;version=KJV"}
-    - {"title": "Proverbs 24:16", "url": "https://www.biblegateway.com/passage/?search=Proverbs+24%3A16&amp;version=KJV"}
-    - {"title": "Proverbs 25:14", "url": "https://www.biblegateway.com/passage/?search=Proverbs+25%3A14&amp;version=KJV"}
-    - {"title": "Proverbs 29:7", "url": "https://www.biblegateway.com/passage/?search=Proverbs+29%3A7&amp;version=KJV"}
+    - title: "Proverbs 3:27"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+3%3A27&amp;version=KJV"
+    - title: "Proverbs 11:14"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+11%3A14&amp;version=KJV"
+    - title: "Proverbs 14:4"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+14%3A4&amp;version=KJV"
+    - title: "Proverbs 14:12"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+14%3A12&amp;version=KJV"
+    - title: "Proverbs 15:28"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+15%3A28&amp;version=KJV"
+    - title: "Proverbs 17:9"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+17%3A9&amp;version=KJV"
+    - title: "Proverbs 17:10"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+17%3A10&amp;version=KJV"
+    - title: "Proverbs 24:16"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+24%3A16&amp;version=KJV"
+    - title: "Proverbs 25:14"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+25%3A14&amp;version=KJV"
+    - title: "Proverbs 29:7"
+      url: "https://www.biblegateway.com/passage/?search=Proverbs+29%3A7&amp;version=KJV"
 melissa:
   host: Melissa
   list:
@@ -40,5 +50,5 @@ melissa:
     - {"title": "Proverbs 11:22", "url": "https://www.biblegateway.com/passage/?search=Proverbs+11%3A22&amp;version=KJV"}
     - {"title": "Proverbs 4:23", "url": "https://www.biblegateway.com/passage/?search=Proverbs+4%3A23&amp;version=KJV"}
 ---
-{% list brian %}
-{% list melissa %}
+{% linkList brian %}
+{% linkList melissa %}
