--- a/episodes/067-bucket-list-foods.njk
+++ b/episodes/067-bucket-list-foods.njk
@@ -34,7 +34,7 @@ melissa:
     - Rack of Lamb
     - Rabbit
     - Baked Alaska
-    - Redwall Abbey foods: Skilly ’n’ Duff, Deeper than Ever Pie
+    - "Redwall Abbey foods: Skilly ’n’ Duff, Deeper than Ever Pie"
     - Butter Beer
     - Giant Ferrero Rocher cake
     - Porter Cake
