--- a/episodes/068-book-titles.njk
+++ b/episodes/068-book-titles.njk
@@ -33,7 +33,7 @@ melissa:
     - To Kill A Mockingbird
     - And Then There Were None
     - Augustus Carp, Esq. By Himself Being The Autobiography of A Really Good Man
-    - She Got Up Off The Couch: And Other Heroic Acts from Mooreland, IN
+    - "She Got Up Off The Couch: And Other Heroic Acts from Mooreland, IN"
     - The Pig That Wants To Be Eaten
     - Villains By Necessity
     - An Arsonist’s Guide To Writers’ Homes In New England
