--- a/episodes/089-brand-names.njk
+++ b/episodes/089-brand-names.njk
@@ -24,7 +24,7 @@ brian:
     - Honda, Hyundai
     - ExOfficio Give-n-Go underwear
     - Red Wing Shoes
-    - Sugar: Cereal, Soda, Ice Cream, Candy
+    - "Sugar: Cereal, Soda, Ice Cream, Candy"
 melissa:
   host: Melissa
   list:
