--- a/episodes/122-the-space-force-will-be-with-us-and-other-news.njk
+++ b/episodes/122-the-space-force-will-be-with-us-and-other-news.njk
@@ -17,6 +17,6 @@ tags:
 
 notes:
   - Thanks to <a href="http://thescifichristian.com/">Matt and Ben</a> for playing along
-  - <a href="https://www.dancarlin.com/product/hardcore-history-death-throes-of-the-republic-series/">Dan Carlin's Hardcore History: Death Throes of the Republic</a> - his 13-hour audiobook on the fall of the Roman Republic
+  - <a href="https://www.dancarlin.com/product/hardcore-history-death-throes-of-the-republic-series/">Dan Carlin's Hardcore History&colon; Death Throes of the Republic</a> - his 13-hour audiobook on the fall of the Roman Republic
   - <a href="https://www.dancarlin.com/hardcore-history-series/">Current free Hardcore History episodes</a>
 ---
