--- a/episodes/125-moral-dilemmas-ii-melissa-strikes-back.njk
+++ b/episodes/125-moral-dilemmas-ii-melissa-strikes-back.njk
@@ -28,7 +28,7 @@ melissa:
     - The Custom of the Sea
     - Coronavirus
 notes:
-  - <a href='https://www.goodreads.com/review/show/2322402838?book_show_action=false&from_review_page=1'>The Pig That Wants to Be Eaten: 100 Experiments for the Armchair Philosopher</a>
+  - <a href='https&colon;//www.goodreads.com/review/show/2322402838?book_show_action=false&from_review_page=1'>The Pig That Wants to Be Eaten&colon; 100 Experiments for the Armchair Philosopher</a>
 ---
 
 {% list melissa %}
