Add Brian's list 152

--- a/episodes/152-books-2021.njk
+++ b/episodes/152-books-2021.njk
@@ -67,3 +67,4 @@ notes:
   - <a href="https://www.goodreads.com/user/show/54340861-melissa">Melissa</a> on Goodreads
   - <a href="https://www.goodreads.com/user/show/4812558-brian-koser">Brian</a> on Goodreads
 ---
+{% bookList brian %}
