--- a/episodes/152-books-2021.njk
+++ b/episodes/152-books-2021.njk
@@ -18,53 +18,54 @@ tags:
 brian:
   host: Brian
   list:
-    - title: The Remains of the Day
-      review: 1893176452
-    - title: Peaceful Parent, Happy Kids
-      review: 2603894268
-    - title: The Separation
-      review: 1579507193
-    - title: "Washington: A Life"
-      review: 2273671931
-    - title: Orthodoxy
-      review: 2273671113
-    - title: That Hideous Strength
-      review: 1414433076
-    - title: Lord of Light
-      review: 1745829652
-    - title: Piranesi
-      review: 2999288870
-    - title: Anna Karenina
-      review: 1599860200
-    - title: Jane Eyre
-      book: 10210
+    - title: Every Layout
+      review: 3859848198
+    - title: Last Call
+      review: 1401589072
+    - title: Children of Dune
+      review: 4319738043
+    - title: The Dark Tower
+      review: 4149204582
+    - title: The Divine Comedy
+      review: 1543573567
+    - title: Paradise Lost
+      review: 1599823750
+    - title: All the King's Men
+      review: 1833662262
+    - title: A Tale of Two Cities
+      review: 1414438100
+    - title: John Adams
+      review: 4095299267
+    - title: Moby-Dick or, The Whale
+      review: 2801148389
 
 melissa:
   host: Melissa
   list:
     - title: The Omnivore's Dilemma
-      review: 
+      review: 4267241274
     - title: Children of Dune
-      review: 
+      review: 3772410744
     - title: The Illustrated Man
-      review: 
-    - title: When Someone Dies
-      review: 
+      review: 2348598889
+    - title: "When Someone Dies: The Practical Guide to the Logistics of Death"
+      review: 4223403211
     - title: The American Way of Death Revisited
-      review: 
+      review: 3871162254
     - title: "Being Mortal: Medicine and What Matters in the End"
-      review: 
+      review: 3400837709
     - title: "Dune: Messiah"
-      review: 
+      review: 3772410102
     - title: "Astro City, #14: Reflections"
-      review: 
+      review: 4409279693
     - title: A Wizard of Earthsea
-      review: 
-    - title: Moby Dick
-      review: 
+      review: 2928781337
+    - title: "Moby-Dick or, the Whale"
+      review: 3865371540
 
 notes:
   - <a href="https://www.goodreads.com/user/show/54340861-melissa">Melissa</a> on Goodreads
   - <a href="https://www.goodreads.com/user/show/4812558-brian-koser">Brian</a> on Goodreads
 ---
 {% bookList brian %}
+{% bookList melissa %}
