--- a/episodes/163-book-review-mrs-dalloway.njk
+++ b/episodes/163-book-review-mrs-dalloway.njk
@@ -6,7 +6,7 @@ description: Brian's quick thoughts on the novel Mrs. Dalloway.
 date: 2023-02-25
 hosts:
   - Brian
-bytes: 
+bytes: 4_326_450
 duration: '0:07:12'
 tags:
   - episodes
